[gd_scene load_steps=41 format=3 uid="uid://c6gjb0c8188tg"]

[ext_resource type="Texture2D" uid="uid://bumwehaq1mlw1" path="res://assets/Knight/Attack/attack0.png" id="1_eobve"]
[ext_resource type="Script" path="res://scripts/enemy_knight.gd" id="1_u4yv4"]
[ext_resource type="Texture2D" uid="uid://w38y3ej1n7an" path="res://assets/Knight/Attack/attack1.png" id="2_s1ks6"]
[ext_resource type="Texture2D" uid="uid://kcy5xkpon05o" path="res://assets/Knight/Attack/attack2.png" id="3_a2gl3"]
[ext_resource type="Texture2D" uid="uid://dqcsi7yur4sjw" path="res://assets/Knight/Attack/attack4.png" id="4_cjund"]
[ext_resource type="Texture2D" uid="uid://dg5gradpk7atp" path="res://assets/Knight/knight.png" id="5_ggu3c"]
[ext_resource type="Texture2D" uid="uid://8nnshn8aek55" path="res://assets/Knight/Knight_On_Cloud/Attack/attack0.png" id="6_35a77"]
[ext_resource type="Texture2D" uid="uid://vo0513cdhmv" path="res://assets/Knight/Walk/walk1.png" id="6_ck3c6"]
[ext_resource type="Texture2D" uid="uid://dsvsitt6smcbe" path="res://assets/Knight/Knight_On_Cloud/Idle/idle.png" id="6_othdd"]
[ext_resource type="Texture2D" uid="uid://xapelrxkllq1" path="res://assets/Knight/Walk/walk2.png" id="7_dbuks"]
[ext_resource type="Texture2D" uid="uid://bhwyy5yhi803x" path="res://assets/Knight/Knight_On_Cloud/Attack/attack1.png" id="7_w4vgx"]
[ext_resource type="Texture2D" uid="uid://c7ejyvgkkg4im" path="res://assets/Knight/Knight_On_Cloud/Attack/attack2.png" id="8_3himb"]
[ext_resource type="Texture2D" uid="uid://bjmky27esaeuj" path="res://assets/Knight/Walk/walk3.png" id="8_lyw8v"]
[ext_resource type="Texture2D" uid="uid://dttp5mudy2fmx" path="res://assets/Knight/Knight_On_Cloud/Attack/attack3.png" id="9_hxjln"]
[ext_resource type="Texture2D" uid="uid://2rpkja3xgq5k" path="res://assets/Knight/Walk/walk4.png" id="9_tomlw"]
[ext_resource type="Texture2D" uid="uid://duloi6ciwjpdg" path="res://assets/Knight/Walk/walk5.png" id="10_816tx"]
[ext_resource type="Texture2D" uid="uid://cm4tekyp3mbky" path="res://assets/Knight/Walk/walk6.png" id="11_b6jd2"]
[ext_resource type="Animation" uid="uid://dshgx13hw8dns" path="res://resources/animations/Knight_Walk.tres" id="15_jcdxy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5l16o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_eobve")
}, {
"duration": 1.0,
"texture": ExtResource("2_s1ks6")
}, {
"duration": 1.0,
"texture": ExtResource("3_a2gl3")
}, {
"duration": 1.0,
"texture": ExtResource("4_cjund")
}],
"loop": false,
"name": &"Knight_Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_35a77")
}, {
"duration": 1.0,
"texture": ExtResource("7_w4vgx")
}, {
"duration": 1.0,
"texture": ExtResource("8_3himb")
}, {
"duration": 1.0,
"texture": ExtResource("9_hxjln")
}],
"loop": true,
"name": &"Knight_Cloud_Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_othdd")
}],
"loop": true,
"name": &"Knight_Cloud_Idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Knight_Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ggu3c")
}],
"loop": false,
"name": &"Knight_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ck3c6")
}, {
"duration": 1.0,
"texture": ExtResource("7_dbuks")
}, {
"duration": 1.0,
"texture": ExtResource("8_lyw8v")
}, {
"duration": 1.0,
"texture": ExtResource("9_tomlw")
}, {
"duration": 1.0,
"texture": ExtResource("10_816tx")
}, {
"duration": 1.0,
"texture": ExtResource("11_b6jd2")
}],
"loop": false,
"name": &"Knight_Walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6j0pm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Knight_Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e6v8y"]
resource_name = "Knight_Cloud_Idle"
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Knight_Cloud_Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_slcdl"]
resource_name = "Knight_Cloud_Attack"
length = 0.5
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Knight_Cloud_Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 1, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_15gvx"]
_data = {
"Knight_Attack": SubResource("Animation_slcdl"),
"Knight_Idle": SubResource("Animation_e6v8y"),
"Knight_Walk": ExtResource("15_jcdxy"),
"RESET": SubResource("Animation_6j0pm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_j31hb"]
radius = 493.293

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3gcbu"]
radius = 19.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_87wj5"]
radius = 17.0162
height = 65.2409

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_454if"]
animation = &"Mage_Attack"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_o6r2i"]
blend_point_0/node = SubResource("AnimationNodeAnimation_454if")
blend_point_0/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rymwk"]
animation = &"Mage_Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rjb2s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_rymwk")
blend_point_0/pos = Vector2(0, 0.1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x8wvr"]
animation = &"Mage_Walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qv1dh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x8wvr")
blend_point_0/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x0d5e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w11ib"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cqkpb"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s8ty4"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q4l12"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rtd2h"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xxph4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ncxoh"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_o6r2i")
states/Attack/position = Vector2(408, 5)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_rjb2s")
states/Idle/position = Vector2(345, 100)
states/Start/position = Vector2(217, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_qv1dh")
states/Walk/position = Vector2(481, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_x0d5e"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_w11ib"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_cqkpb"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_s8ty4"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_q4l12"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_rtd2h"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_xxph4")]
graph_offset = Vector2(-73, -38.0595)

[node name="EnemyKnight" type="CharacterBody2D" groups=["enemy"]]
slide_on_ceiling = false
script = ExtResource("1_u4yv4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5l16o")
animation = &"Knight_Walk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_15gvx")
}

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(-3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_j31hb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 3)
shape = SubResource("CapsuleShape2D_3gcbu")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(50, -5)
scale = Vector2(1.88291, 1.79135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-19.6504, 2.23295)
rotation = -0.493171
shape = SubResource("CapsuleShape2D_87wj5")

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_ncxoh")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/Attack/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(-0.353909, -0.12766)
parameters/Walk/blend_position = Vector2(0, 0)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
